<resources>
    <string name="app_name">DicodingEvent</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming </string>
    <string name="title_finished">Finished</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_setting">Setting</string>
    <string name="title_event">Judul Event</string>
    <string name="image_banner">Gambar Banner</string>
    <string name="register">Register</string>
    <string name="searchbar_hint">Search</string>
    <string name="upcoming">Upcoming Event</string>
    <string name="finished">Finished Event</string>
    <string name="dicoding_event">Dicoding Event</string>
    <string name="add_favorite">Tambah Favorite</string>
    <string name="close_button">Close Button</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="visit_webpage">Visit Webpage</string>
    <string name="type_something">Type something…</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="organized_by">Organized by: %1$s</string>
    <string name="remaining_quota">Remaining quota: %1$s</string>
    <string name="event_notifications">Event Reminder</string>



</resources>