<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgEventDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:contentDescription="@string/title_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
           />
        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/add_favorite"
            android:src="@drawable/baseline_favorite_border_24"
            android:tag="Not Saved"
            app:layout_constraintEnd_toEndOf="@+id/imgEventDetail"
            app:layout_constraintTop_toTopOf="@+id/imgEventDetail"  />

        <TextView
            android:id="@+id/tvDetailEventTitle"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"

            android:layout_marginVertical="12dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgEventDetail"
            android:layout_marginHorizontal="16dp" />

        <TextView
            android:id="@+id/tvOwnerName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailEventTitle"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="16dp"/>

        <TextView
            android:id="@+id/tvQuota"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOwnerName"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/tvTimeStart"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvQuota"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/tvTimeEnd"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTimeStart"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/tvEventDescription"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:lineSpacingMultiplier="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTimeEnd"
            android:layout_marginHorizontal="8dp"/>

        <Button
            android:id="@+id/btnEventCTA"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEventDescription" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>